Added image with Alpakka physical controls info

--- a/src/pug/alpakka/gallery.pug
+++ b/src/pug/alpakka/gallery.pug
@@ -38,3 +38,4 @@ block page
       +imglink('/static/img/alpakka_black_red_stand.jpg')
       +imglink('/static/img/alpakka_black_pink_stand.jpg')
       +imglink('/static/img/alpakka_rainbow.jpg')
+      +imglink('/static/img/alpakka_black_silver_info.jpg')
