--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -25,6 +25,12 @@ block page
       p Our next goal is to acquire laboratory materials and tools, such as different models of 3D printers, oscilloscope, thermal camera, ultra-high framerate monitors, and other hardware and software.
       p Check #[+ax(org.patreon) Patreon] for details about tier rewards and more.
 
+      h3 Patron Benefits
+      ul 
+        li #[em Private channel and voting]: Input Labs patrons can use the #[+ax(org.discord) Discord] channel to suggest games for the accessibility DB and the next video demo, as well as research topics for the blog. Once a month we will then enable voting for entries in those lists.
+        li #[em Display your name]: After becoming a patron (level 2+) and joining our #[+ax(org.discord) Discord], your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg. Within three working days your name will be added to a separate branch in our github repository. Later-on this list will be cleaned up, merged to the master branch, go through our CI/CD process, and become part of the next firmware release.
+        li #[em Mini Alpakka keyring]: as a special token of our appreciation you will receive a mini Alpakka keyring like this:
+
     div.box
       h2 Become a tester
       p If you are the kind of person that likes to try new things, and/or if you are a person with disabilities, we would be very interested in your feedback about latest prototypes.
