Added tester and review hardware guidelines

--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -7,11 +7,6 @@ block content
   h2 Frequently Asked Questions
   hr
 
-  mixin h3id(id)
-    h3(id=id)
-      block
-      a(href='#'+id class='paragraph') ¶
-
   +h3id('thumbstick') Why it does not have a second thumbstick?
   p What the second thumbstick is normally used in most games (camera control / aiming) is replaced with a much superior gyro solution (this controller is made from the ground up for gyro controls).
   p Then the extra thumbstick is not very useful for other tasks. So for example zooming in/out maps, or scrolling inventory, or zooming weapons is much better on a scrollwheel, and emulating a selection wheel is much better on a 8-directional switch with much less travel (faster) and with physical feedback (clicking).
@@ -75,8 +70,8 @@ block content
   +h3id('test') Can I get a free controller?
   p There are 2 ways to get a free controller made by us:
   ul
-    li If you run or work for a Youtube channel, website, or similar; and you want to review our devices. See #[+a('/press') Press].
-    li If you become a tester. See #[+a('/contribute') Contribute].
+    li If you run or work for a Youtube channel, website, or similar; and you want to review our devices. See #[+a('/blog/hardware_review') Get hardware for review].
+    li If you want to become a tester. See #[+a('/blog/hardware_testing') Becoming a tester].
   hr
 
   +h3id('cost') How much would it cost to build my own controller?
