--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -29,6 +29,8 @@ block page
 
         h3 Other
         div
+          +wikilink('hardware_testing') Become a tester
+          +wikilink('hardware_review') Get hardware for review
           +wikilink('next') Next blog entries
           +wikilink(org.roadmap, true) Roadmap
 
