--- a/src/pug/press.pug
+++ b/src/pug/press.pug
@@ -14,5 +14,5 @@ block page
 
     div.box
       h2 Get free hardware for review
-      p If you run a Youtube channel, website, or similar; and you want to review our devices, we will be very happy to send you some.
-      p Contact us at #[span.lima #[span.lima2]] #[i (Cannot be copied)]
+      p If you run a Youtube channel, podcast, website, or similar; and you want to review our devices, we will be very happy to send you some.
+      p Check #[+a('blog/hardware_review') Get hardware for review] page.
