--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -56,6 +56,11 @@ mixin wikilink(href, external=false)
       +a(href)
         block
 
+mixin h3id(id)
+  h3(id=id)
+    block
+    a(href='#'+id class='paragraph') ¶
+
 mixin a(href)
   a(href=href)
     block
