--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -18,6 +18,7 @@ block page
           +wikilink('live') We are live
           +wikilink('report_1') Progress report 1
           +wikilink('report_2') Progress report 2
+          +wikilink('report_3') Progress report 3
 
         h3 Research
         div
