Fixed broken links to STL and 3MF files

--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -8,7 +8,7 @@ block content
   hr
 
   h3 3D models
-  p The source designs for the case and buttons are available at #[+ax('https://github.com/inputlabs/alpakka_case') Alpakka 3D-print] repository, along with the pre-built #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/prints/stl') STL] and #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/prints/3mf') 3MF] files for the reference designs.
+  p The source designs for the case and buttons are available at #[+ax('https://github.com/inputlabs/alpakka_case') Alpakka 3D-print] repository, along with the pre-built #[+ax('https://github.com/inputlabs/alpakka_case/releases/latest') STL and 3MF] files for the reference designs.
 
   h3 3D printer
   p Any modern FDM (Fused Deposition Modeling) printer should be able to print Alpakka case and buttons, the parts are designed so they do not require any additional supports, but the printer must be able do generate at least 10 millimeter bridges.
