Using local MathJax script

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -44,7 +44,7 @@ html
         type='text/javascript'
         id='MathJax-script'
         async
-        src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js'
+        src='/static/tex-svg.js' /* From: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js */
       )
 
   body
