added patron benefits details

--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -25,13 +25,18 @@ block page
       p Our next goal is to acquire laboratory materials and tools, such as different models of 3D printers, oscilloscope, thermal camera, ultra-high framerate monitors, and other hardware and software.
       p Check #[+ax(org.patreon) Patreon] for details about tier rewards and more.
 
-      h3 Patron Benefits
+    div.box
+      h2 Patron Benefits
       ul 
         li #[em Private channel and voting]: Input Labs patrons can use the #[+ax(org.discord) Discord] channel to suggest games for the accessibility DB and the next video demo, as well as research topics for the blog. Once a month we will then enable voting for entries in those lists.
         li #[em Display your name]: After becoming a patron (level 2+) and joining our #[+ax(org.discord) Discord], your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg. Within three working days your name will be added to a separate branch in our github repository. Later-on this list will be cleaned up, merged to the master branch, go through our CI/CD process, and become part of the next firmware release.
-        li #[em Mini Alpakka keyring] (level3+): as a special token of our appreciation you will receive a mini Alpakka keyring like this:
-        img(src='/static/img/le-peiti-alpakka.jpg' style='height:300px;')
+        li #[em Mini Alpakka keyring] (level3+): as a special token of our appreciation you will receive a mini Alpakka keyring.
         li #[em Conducive Hex] (level 4): as another special token of our appreciation you will receive a conducive Hex (PLA black) to easily build your own #[+a('/alpakka') Alpakka].
+
+    div.box.image
+      a.img(href='/alpakka')
+        img(src='/static/img/le-peiti-alpakka.jpg')
+        div Le petit Alpakka for our patrons
 
     div.box
       h2 Become a tester
