--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -28,15 +28,14 @@ block page
     div.box
       h2 Patron Benefits
       ul 
-        li #[em Private channel and voting]: Input Labs patrons can use the #[+ax(org.discord) Discord] channel to suggest games for the accessibility DB and the next video demo, as well as research topics for the blog. Once a month we will then enable voting for entries in those lists.
-        li #[em Display your name]: After becoming a patron (level 2+) and joining our #[+ax(org.discord) Discord], your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg. Within three working days your name will be added to a separate branch in our github repository. Later-on this list will be cleaned up, merged to the master branch, go through our CI/CD process, and become part of the next firmware release.
-        li #[em Mini Alpakka keyring] (level3+): as a special token of our appreciation you will receive a mini Alpakka keyring.
-        li #[em Conductive Hex] (level 4): as another special token of our appreciation you will receive a conductive Hex (PLA black) to easily build your own #[+a('/alpakka') Alpakka].
+        li #[em Private channel and voting]: Input Labs patrons can use the #[+ax(org.discord) Discord] channel to suggest games for the next video demo and the accessibility DB, as well as research topics for the blog. About once a month we will then enable voting for entries in those lists.
+        li #[em Display your name]: After becoming a patron (tier 2+) and possibly joining our #[+ax(org.discord) Discord], your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg and become part of the next firmware release. (Within three working days your name will be added to a separate branch in our github repository and go through part of the normal CI/CD process)
+        li #[em Mini Alpakka keyring] (tier 3+): as a special token of our appreciation you will receive a mini Alpakka keyring.
 
     div.box.image
       a.img(href='/alpakka')
         img(src='/static/img/le-peiti-alpakka.jpg')
-        div Le petit Alpakka for our patrons
+        div Le petit Alpakka
 
     div.box
       h2 Become a tester
