--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -26,16 +26,16 @@ block page
       p Check #[+ax(org.patreon) Patreon] for details about tier rewards and more.
 
     div.box
-      h2 Patron Benefits
+      h2 Patron benefits
       ul 
         li #[em Private channel and voting]: Input Labs patrons can use the #[+ax(org.discord) Discord] channel to suggest games for the next video demo and the accessibility DB, as well as research topics for the blog. About once a month we will then enable voting for entries in those lists.
-        li #[em Display your name]: After becoming a patron (tier 2+) and possibly joining our #[+ax(org.discord) Discord], your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg and become part of the next firmware release. (Within three working days your name will be added to a separate branch in our github repository and go through part of the normal CI/CD process)
+        li #[em Display your name]: After becoming a patron (tier 2+) your name (up to 16 lower-case characters of the English alphabet) will be included in an easter-egg and become part of the next firmware release. (Within three working days your name will be added to a separate branch in our github repository and go through part of the normal CI/CD process)
         li #[em Mini Alpakka keyring] (tier 3+): as a special token of our appreciation you will receive a mini Alpakka keyring.
 
     div.box.image
       a.img(href='/alpakka')
         img(src='/static/img/le-peiti-alpakka.jpg')
-        div Le petit Alpakka
+        div Le petit Alpakka for our patrons
 
     div.box
       h2 Become a tester
