Added 4 new games to accessibility db, Added accessibility stats page

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -20,7 +20,7 @@
   }
 
   const parent = {
-    db:            '/db/borderlands_3',
+    db:            '/db/stats',
     blog:          '/blog/report_3',
     alpakkaManual: '/alpakka/manual/mouse',
   }
