--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -15,17 +15,20 @@ block page
 
         h3 Misc
         div
+          +wikilink('stats') Stats
           +wikilink('glossary') Glossary
           +wikilink('improve') Help improving this list
 
         h3 Games
         div
+          +wikilink('battlefield_4') Battlefield 4
           +wikilink('borderlands_3') Borderlands 3
           +wikilink('bullets_per_minute') Bullets Per Minute
           +wikilink('warzone_2') Call of Duty: Warzone 2
           +wikilink('days_gone') Days Gone
           +wikilink('deep_rock_galactic') Deep Rock Galactic
           +wikilink('doom_2016') Doom (2016)
+          +wikilink('far_cry_5') Far Cry 5
           +wikilink('fortnite') Fortnite
           +wikilink('ghostrunner') Ghostrunner
           +wikilink('half_life_2') Half-Life 2
@@ -37,6 +40,8 @@ block page
           +wikilink('prodeus') Prodeus
           +wikilink('pubg') PUBG: Battlegrounds
           +wikilink('rainbow_six_siege') Rainbow Six Siege
+          +wikilink('risk_of_rain_2') Risk of Rain 2
+          +wikilink('superhot_mcd') Superhot: Mind Control Delete
           +wikilink('the_witcher_3') The Witcher 3
 
     div.box.entry
