Progress report 4, Added headers into previous reports

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -19,6 +19,7 @@ block page
           +wikilink('report_1') Progress report 1
           +wikilink('report_2') Progress report 2
           +wikilink('report_3') Progress report 3
+          +wikilink('report_4') Progress report 4
 
         h3 Research
         div
