--- a/src/pug/blog/report_2.pug
+++ b/src/pug/blog/report_2.pug
@@ -9,6 +9,7 @@ block content
   p: i 10 December 2022
   hr
 
+  h3 Console legacy profile and firmware improvements
   p A new profile #[+a('/alpakka/manual/profile_console_legacy') Console Legacy] is now implemented. It comes with mouse emulation completely disabled, and #[em right thumbstick emulated] in the 8-direction switch.
 
   p This is the last fallback for games that may have issues when mouse movement is detected, that do not support mouse and keyboard at all, or in which a second thumbstick is absolutely mandatory. These kind of games #[em should be extremely rare], so if you know some please ping us.
@@ -53,9 +54,10 @@ block content
     );
 
   p These features also set the foundations to be able to assign any action (or group of actions) to gyro directions, for example #[em turn gyro up => press space] which will be an important accessibility feature, specially later in the #[+a('/kapybara') Kapybara] controller. But the implementation is not complete yet.
+  hr
 
+  h3 Accessibility database
   p Additionally our lovely #[+ax(org.patreon) Patrons] voted these 8 games to be added to the accessibility DB:
-
   ul
     li: +a('/db/borderlands_3') Borderlands 3
     li: +a('/db/bullets_per_minute') Bullets Per Minute
@@ -65,6 +67,7 @@ block content
     li: +a('/db/hunt_showdown') Hunt: Showdown
     li: +a('/db/no_mans_sky') No Man's Sky
     li: +a('/db/rainbow_six_siege') Rainbow Six Siege
+  hr
 
   p Thanks for your support!
 
