--- a/src/pug/blog/report_3.pug
+++ b/src/pug/blog/report_3.pug
@@ -9,11 +9,17 @@ block content
   p: i 17 December 2022
   hr
 
+  h3 Firmware easter egg
   p A new version of the Alpakka firmware has been released #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.86.1') 0.86.1], with an #[em easter egg] for patrons, which is one of the #[+ax(org.patreon) Patreon] rewards. We could explain how it works and what it does, but where would be the fun then?
+  hr
 
+  h3 Become a tester
   p We also put in place the guidelines and expectations to #[+a('/blog/hardware_testing') become a tester], and how to apply. With this program we aim to gather much more feedback about the devices, specially from #[em gamers with disabilities], giving them #[em hardware free of cost] if necessary. This is going to be a significant expenditure for Input Labs, and we may not be able to do it forever, but no one said democratizing videogame controllers will be easy nor cheap.
+  hr
 
+  h3 Gameplay video
   p And finally, our wonderful patrons voted #[+ax('https://www.youtube.com/watch?v=dUnYtamr2OI') Doom (2016)] for a gameplay video with the Alpakka controller.
+  hr
 
   p Thanks for your support!
 
