Removed link to form

--- a/src/pug/blog/hardware_testing.pug
+++ b/src/pug/blog/hardware_testing.pug
@@ -33,4 +33,6 @@ block content
     li Devices should be returned to Input Labs if requested.
     li Testing hardware comes without any kind of warranty, nor responsibility for damages.
 
-  p Apply to join the tester program: #[+ax('https://forms.gle/RJtT5j86xcrp4WMCA') Join tester program].
+  p Apply to join the tester program: #[del: +a('') Join tester program]
+
+  p: em: i (We had to temporally close the form for technical reasons, it will be back in a few days)
