--- a/src/pug/blog/hardware_testing.pug
+++ b/src/pug/blog/hardware_testing.pug
@@ -33,4 +33,4 @@ block content
     li Devices should be returned to Input Labs if requested.
     li Testing hardware comes without any kind of warranty, nor responsibility for damages.
 
-  p Apply to join the tester program: #[+ax('https://forms.gle/RJtT5j86xcrp4WMCA') Join tester program].
+  p Apply to join the tester program: #[+ax('https://forms.gle/UvtxVBZe1sKrcRPD7') Join tester program].
