--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -8,4 +8,12 @@ block content
   hr
   p: i 30 December 2022
   hr
-  
+  h3 Accepted first batch of testers
+  h3 Input Labs designs and groups in Printables and Thingiverse
+  h3 Some stats
+
+  hr
+
+  p Enjoy the new run-around-the-sun celebrations!
+
+  p - M&M <3
