--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -8,10 +8,27 @@ block content
   hr
   p: i 30 December 2022
   hr
-  h3 Accepted first batch of testers
-  h3 Input Labs designs and groups in Printables and Thingiverse
-  h3 Some stats
 
+  h3 First batch of testers
+  p We reviewed and accepted our first batch of testers (in addition to the friends and family we (ab-)used previously), and are currently in the process of setting up and testing the process and logistics for distributing hardware for those testers who need it.
+
+  p Based on the information provided in the questionaire,
+  ul 
+    li more than 30% of respondents have a disability 
+    li more than 60% are able to 3D print
+    li more than 30% are interested in Kapybara
+  p Thank you very much for your input!
+  hr
+
+  h3 Printables and Thingiverse
+  p We created groups in #[+ax("https://www.printables.com/group/input-labs-VZE4mJR") Printables], and #[+ax("https://www.thingiverse.com/groups/input-labs") Thingiverse] for our designs (#[+ax("https://www.printables.com/model/351339-alpakka") Alpakka on Printables ], #[+ax("https://www.thingiverse.com/thing:5748744") Alpakka on Thingiverse]).
+  p This should make it considerably easier for people to find those designs, mix them up, and provide feedback.
+  hr
+  
+  h3 Some stats
+  p Our Discord community has now grown to more than 200 participants, and the activity is great!
+  p We also have now more than 250 subscribers on YouTube.
+  p Thank you very much!
   hr
 
   p Enjoy the new run-around-the-sun celebrations!
