--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -40,4 +40,4 @@ block page
     div.box
       h2 Become a tester
       p If you are the kind of person that likes to try new things, and/or if you are a person with disabilities, we would be very interested in your feedback about latest prototypes.
-      p Please ping us in #[+ax(org.discord) Discord] #[em #testing] channel.
+      p Please check #[+ax('/blog/hardware_testing') how to become a tester] or ping us in the #[+ax(org.discord) Discord] #[em #testing] channel.
