added link to tester blog, added link to kapybara, wording

--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -10,18 +10,18 @@ block content
   hr
 
   h3 First batch of testers
-  p We reviewed and accepted our first batch of testers (in addition to the friends and family we (ab-)used previously), and are currently in the process of setting up and testing the process and logistics for distributing hardware for those testers who need it.
+  p We reviewed and accepted our first batch of #[+ax("/blog/hardware_testing") testers] (in addition to the friends and family we used previously), and are currently in the process of setting up and testing the process and logistics for distributing hardware for those testers who need it.
 
   p Based on the information provided in the questionaire,
   ul 
     li more than 30% of respondents have a disability 
     li more than 60% are able to 3D print
-    li more than 30% are interested in Kapybara
-  p Thank you very much for your input!
+    li more than 30% are interested in #[+ax("/kapybara") Kapybara]
+  p Thank you very much for your interest!
   hr
 
   h3 Printables and Thingiverse
-  p We created groups in #[+ax("https://www.printables.com/group/input-labs-VZE4mJR") Printables], and #[+ax("https://www.thingiverse.com/groups/input-labs") Thingiverse] for our designs (#[+ax("https://www.printables.com/model/351339-alpakka") Alpakka on Printables ], #[+ax("https://www.thingiverse.com/thing:5748744") Alpakka on Thingiverse]).
+  p We created groups for our Alpakka designs on #[+ax("https://www.printables.com/model/351339-alpakka") Printables ] and on #[+ax("https://www.thingiverse.com/thing:5748744") Thingiverse]).
   p This should make it considerably easier for people to find those designs, mix them up, and provide feedback.
   hr
   
