--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -21,7 +21,7 @@ block content
   hr
 
   h3 Printables and Thingiverse
-  p We created groups for our Alpakka designs on #[+ax("https://www.printables.com/model/351339-alpakka") Printables ] and on #[+ax("https://www.thingiverse.com/thing:5748744") Thingiverse]).
+  p We created groups for our Alpakka designs on #[+ax("https://www.printables.com/model/351339-alpakka") Printables ] and on #[+ax("https://www.thingiverse.com/thing:5748744") Thingiverse].
   p This should make it considerably easier for people to find those designs, mix them up, and provide feedback.
   hr
   
