--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -10,13 +10,13 @@ block content
   hr
 
   h3 First batch of testers
-  p We reviewed and accepted our first batch of #[+ax("/blog/hardware_testing") testers] (in addition to the friends and family we used previously), and are currently in the process of setting up and testing the process and logistics for distributing hardware for those testers who need it.
+  p We reviewed and accepted our first batch of #[+a("/blog/hardware_testing") testers] (in addition to the friends and family we used previously). Currently we are setting up and testing the process, as well as the logistics for distributing hardware for those testers who need it.
 
-  p Based on the information provided in the questionaire,
+  p Based on the information provided in the questionaire:
   ul 
-    li more than 30% of respondents have a disability 
-    li more than 60% are able to 3D print
-    li more than 30% are interested in #[+ax("/kapybara") Kapybara]
+    li about 30% of the accepted testers have a disability
+    li more than 35% will receive Alpakka free controllers
+    li about 30% are interested in #[+a("/kapybara") Kapybara]
   p Thank you very much for your interest!
   hr
 
