--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -15,7 +15,7 @@ block content
   p Based on the information provided in the questionaire:
   ul 
     li about 30% of the accepted testers have a disability
-    li more than 35% will receive Alpakka free controllers
+    li more than 35% will receive free #[+a("/alpakka")Alpakka] controllers
     li about 30% are interested in #[+a("/kapybara") Kapybara]
   p Thank you very much for your interest!
   hr
