Added full privacy policy

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -65,3 +65,4 @@ block page
       h2 Privacy
       p This website do not use cookies, do not store any personal information, and #[em respect your privacy]. We do not care who you are! and that's a good thing.
       p For aggregated usage stats we use #[+ax('https://plausible.io') Plausible], an open-source web analytics tool which is 100% anonymous, do not track you across different websites nor devices, and is hosted in the European Union (covered by strict privacy laws).
+      p For details, read the full #[+a('/policies/privacy') Privacy policy].
