Added recommended perimeter thickness and infill density

--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -38,6 +38,12 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
+      td Recommended perimeter thickness
+      td 2 mm
+    tr
+      td Recommended infill
+      td Gyroid 10%
+    tr
       td Used filament
       td ~60 grams
     tr
@@ -55,6 +61,12 @@ block content
     tr
       td Recommended filament
       td Standard PLA 1.75 mm
+    tr
+      td Recommended perimeter thickness
+      td 2 mm
+    tr
+      td Recommended infill
+      td Gyroid 10%
     tr
       td Used filament
       td ~50 grams
@@ -74,6 +86,12 @@ block content
     tr
       td Recommended filament
       td Standard PLA 1.75 mm
+    tr
+      td Recommended perimeter thickness
+      td 2 mm
+    tr
+      td Recommended infill
+      td Gyroid 15%
     tr
       td Used filament
       td ~25 grams
@@ -99,6 +117,12 @@ block content
       td Recommended filament
       td Standard PLA 1.75 mm
     tr
+      td Recommended perimeter thickness
+      td 2 mm
+    tr
+      td Recommended infill
+      td Gyroid 15%
+    tr
       td Used filament
       td ~14 grams
     tr
@@ -116,6 +140,12 @@ block content
     tr
       td Recommended filament
       td Conductive PLA 1.75 mm
+    tr
+      td Recommended perimeter thickness
+      td 3 mm
+    tr
+      td Recommended infill
+      td Solid 100%
     tr
       td Used filament
       td ~4 grams
