--- a/src/pug/alpakka/manual/tune.pug
+++ b/src/pug/alpakka/manual/tune.pug
@@ -13,69 +13,93 @@ block content
     li Hold the #[em Home #[+home]] button.
     li Hold the #[em Directional Hat #[+hat]] either up, down, left or right. Each direction tune a different option (see below).
     li Release the #[em Directional Hat #[+hat]], but keep holding the #[em Home #[+home]] button.
-    li Notice how the LEDs are showing which #[em tune option is selected] (represented by a solid light) and its #[em current value] (represented by a flashing light).
+    li Notice how the LEDs are showing which #[em tune option is selected] (represented by a solid light) and its #[em current value] (represented by a blinking light).
     li Change the value up or down by using the #[em scroll wheel up or down].
     li Release the #[em Home #[+home]] button.
 
-  table.manual.col4.hdiv
+  table.manual.col6.hdiv
     tr
       th
-      th
+      th.center
         div ← Tune down
         div (scroll down)
       th
-      th.right
+      th
+      th
+      th.center
         div Tune up →
         div (scroll up)
     tr
       td.middle
         h3 Operative System
-        div Hold Home #[+home] + hold Hat up #[+hat]↑
+        div Hold Home #[+home]
+        div + hold Hat up #[+hat]↑
         div: i (Requires controller restart)
       td
+      td
       td.center
-        img(src='/static/manual/led_up_down.apng' width='50px')
-        div Windows #[i (Default)]
+        img(src='/static/manual/led_tune_up_0.png' width='50px')
+        div Windows
+        i (Default)
+      td
       td.center
-        img(src='/static/manual/led_up_right.apng' width='50px')
+        img(src='/static/manual/led_tune_up_1.png' width='50px')
         div GNU/Linux
     tr
       td.middle
-        h3 Thumbstick Deadzone
-        div Hold Home #[+home] + hold Hat left #[+hat]←
+        h3 Thumbstick deadzone
+        div Hold Home #[+home]
+        div + hold Hat left #[+hat]←
       td.center
-        img(src='/static/manual/led_left_down.apng' width='50px')
-        div 5% #[i (Default)]
+        img(src='/static/manual/led_tune_left_0.png' width='50px')
+        div 5%
+        i (Default)
+      td
       td.center
-        img(src='/static/manual/led_left_right.apng' width='50px')
+        img(src='/static/manual/led_tune_left_1.png' width='50px')
         div 10%
+      td
       td.center
-        img(src='/static/manual/led_left_up.apng' width='50px')
+        img(src='/static/manual/led_tune_left_2.png' width='50px')
         div 15%
     tr
       td.middle
-        h3 Vibration
-        div Hold Home #[+home] + hold Hat right #[+hat]→
-        div: i (Not implemented yet)
+        h3 Touch threshold
+        div Hold Home #[+home]
+        div + hold Hat right #[+hat]→
       td.center
-        img(src='/static/manual/led_right_down.apng' width='50px')
-        div 0%
+        img(src='/static/manual/led_tune_right_0.png' width='50px')
+        div 2 μs
       td.center
-        img(src='/static/manual/led_right_left.apng' width='50px')
-        div 50%
+        img(src='/static/manual/led_tune_right_1.png' width='50px')
+        div 3 μs
       td.center
-        img(src='/static/manual/led_right_up.apng' width='50px')
-        div 100% #[i (Default)]
+        img(src='/static/manual/led_tune_right_2.png' width='50px')
+        div 5 μs
+        i (Default)
+      td.center
+        img(src='/static/manual/led_tune_right_3.png' width='50px')
+        div 8 μs
+      td.center
+        img(src='/static/manual/led_tune_right_4.png' width='50px')
+        div 13 μs
     tr
       td.middle
         h3 Mouse sensitivity
-        div Hold Home #[+home] + hold Hat down #[+hat]↓
+        div Hold Home #[+home]
+        div + hold Hat down #[+hat]↓
       td.center
-        img(src='/static/manual/led_down_left.apng' width='50px')
-        div Low - 1080p #[i (Default)]
+        img(src='/static/manual/led_tune_down_0.png' width='50px')
+        div Low
+        div 1080p
+        i (Default)
+      td
       td.center
-        img(src='/static/manual/led_down_up.apng' width='50px')
-        div Mid - 1440p
+        img(src='/static/manual/led_tune_down_1.png' width='50px')
+        div Mid
+        div 1440p
+      td
       td.center
-        img(src='/static/manual/led_down_right.apng' width='50px')
-        div High - 4K
+        img(src='/static/manual/led_tune_down_2.png' width='50px')
+        div High
+        div 4K
