initial progress report 6

--- a/src/pug/blog/report_6.pug
+++ b/src/pug/blog/report_6.pug
@@ -17,7 +17,7 @@ block content
   hr
 
   h3 Fixed infinite calibration issue
-  p Some users alerted us to a bug that resulted in continuous, repeated self-calibration of the Alpakka.
+  p Some users alerted us to a #[+ax("https://github.com/inputlabs/organization/issues/48") bug] that resulted in continuous, repeated self-calibration of the Alpakka.
   p This issue was fixed in #[+ax("https://github.com/inputlabs/alpakka_firmware/releases/tag/0.86.5") the latest firmware release].
   hr
 
