--- a/src/pug/blog/report_6.pug
+++ b/src/pug/blog/report_6.pug
@@ -22,7 +22,7 @@ block content
   hr
 
   h3 Adjustable touch threshold
-  p In order to support the use of different conductive filaments we made the #[+a("/alpakka/manual/tune") touch threshold adjustable]. The default is still 5 us, which we found works very well with conductive filament from #[+ax("https://www.proto-pasta.com/collections/all/products/conductive-pla") Protopasta].
+  p In order to support the use of different conductive filaments we made the #[+a("/alpakka/manual/tune") touch threshold adjustable]. The default is still 5 μs, which we found works very well with conductive filament from #[+ax("https://www.proto-pasta.com/collections/all/products/conductive-pla") Protopasta].
   p If you are experimenting with other conductive filaments, you may want to adjust the touch sensitivity.
   p This is also part of #[+ax("https://github.com/inputlabs/alpakka_firmware/releases/tag/0.86.5") the latest firmware release].
   hr
