fixed typo in manual

--- a/src/pug/alpakka/manual/setup.pug
+++ b/src/pug/alpakka/manual/setup.pug
@@ -11,7 +11,7 @@ block content
   p The current reference design is not wireless yet, so it requires a #[em USB cable (USB Micro-B)] to connect it to the computer.
   hr
 
-  h3 Operative system
+  h3 Operating system
   p This device is compatible with Windows and Linux, and #[em does not require to install any driver].
   p The controller can be configured in #[+a('tune') Tune options] to match your operative system, the options are #[em Windows (default) or GNU/Linux].
   hr
