Initial progress report 7

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -15,6 +15,7 @@ block page
 
         h3 News
         div
+          +wikilink('report_7') Progress report 7
           +wikilink('report_6') Progress report 6
           +wikilink('report_5') Progress report 5
           +wikilink('report_4') Progress report 4
