--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -28,6 +28,7 @@ block page
           +wikilink('days_gone') Days Gone
           +wikilink('deep_rock_galactic') Deep Rock Galactic
           +wikilink('doom_2016') Doom (2016)
+          +wikilink('elden_ring') Elden Ring
           +wikilink('far_cry_5') Far Cry 5
           +wikilink('fortnite') Fortnite
           +wikilink('ghostrunner') Ghostrunner
