--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -30,6 +30,7 @@ block page
 
         h3 DIY & Hardware
         div
+          +wikilink('diy_getting_started') Getting Started
           +wikilink('diy_pcb') Order PCB
           +wikilink('diy_solder') Solder PCB
           +wikilink('diy_case') 3D print case & buttons
