fixed broken link

--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -77,7 +77,7 @@ block content
   +h3id('cost') How much would it cost to build my own controller?
   p Your mileage will vary a lot, depending on how many controllers you want to build (e.g., there is usually an order minimum for PCBs), on different suppliers and manufacturers, etc.
   p If you already have the required tools (3D printer, solder iron, etc...), and ignoring shipping costs of components, the cost per controller may come down to between €25 and €45.
-  p For the latest experiences, you could check the various #[+ax('org.discord') Discord channels] (e.g., #diy-support, #diy-share-parts).
+  p For the latest experiences, you could check the various #[+ax(org.discord) Discord channels] (e.g., #diy-support, #diy-share-parts).
   hr
 
   +h3id('angular') Why is the case so angular?
