Added featured-on links, progress reports cleanup

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -36,7 +36,8 @@ block page
         div
           +wikilink('hardware_testing') Become a tester
           +wikilink('hardware_review') Get hardware for review
-          +wikilink('next') Next blog entries
+          +wikilink('talking_about_us') They were talking about us
+          +wikilink('next') Collaborate
           +wikilink(org.roadmap, true) Roadmap
 
     div.box.entry
