--- a/src/pug/blog/report_4.pug
+++ b/src/pug/blog/report_4.pug
@@ -45,7 +45,7 @@ block content
   p Additionally there is now a #[+a('/db/stats') stats page] with aggregated data from all games.
   hr
 
-  p Have a nice winter solstice celebrations!
+  p Have a nice solstice celebrations!
 
   p - Marcos and Michael <3
 
