--- a/src/pug/blog/report_7.pug
+++ b/src/pug/blog/report_7.pug
@@ -15,12 +15,7 @@ block content
   hr
 
   h3 Bug fixing
-  p We spent a lot of time fixing issues related to how specific platforms (KDE, Steam) behave. Those fixes will be part of the next release.
-  img.mt(src='/static/blog/Screenshot_20230126_064746.png' width='425px')
-  hr
-
-  h3 Raspberry Pi Blog
-  p The Alpakka received another, very favorable review. This time by the #[+ax("https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/") Raspberry Pi blog].
+  p We were actively investigating issues related to how specific platforms (KDE, Steam Deck) behave. There will be more details about this later on.
   hr
 
   p - M&M <3
