--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -80,7 +80,7 @@ html
 
     footer
       div Input Labs Oy.
-      div: +a('javascript:rainbowToggle()') Toggle rainbow
+      div: a(role="button" data-toggleanimations="data-toggleanimations") Toggle animations
       div: +a('/about') About
       div: +a('/press') Press
       div: +ax('https://github.com/inputlabs/website/blob/main/license.md') CC BY-NC-SA
