--- a/src/static/style.css
+++ b/src/static/style.css
@@ -90,9 +90,10 @@ header .logo img {
   animation: animation-bg var(--cycle) linear infinite;
   animation-delay: calc(var(--seed) + -0.75s);
   box-shadow: inset 0 0 0 4px black;
+  outline: 2px solid black;
 }
 header .logo img.logo-static {
-  display: none
+  display: none;
 }
 
 header .logo span {
@@ -596,6 +597,8 @@ footer div:last-child {
 }
 footer a {
   color: white;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* OTHER =================================================================== */
