--- a/src/pug/blog/live.pug
+++ b/src/pug/blog/live.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 We are live
-  hr
-  p: i 22 November 2022
-  hr
+  +news_header('22 November 2022', null, 'report_1')
 
   p: b The cat is out of the bag =^_^=
 
