--- a/src/pug/blog/report_1.pug
+++ b/src/pug/blog/report_1.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #1
-  hr
-  p: i 3 December 2022
-  hr
+  +news_header('3 December 2022', 'live', 'report_2')
 
   p This has been a very special week, we shared our passion project with the world, and the response has been awesome!, we could not be happier.
 
