--- a/src/pug/blog/report_2.pug
+++ b/src/pug/blog/report_2.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #2
-  hr
-  p: i 10 December 2022
-  hr
+  +news_header('10 December 2022', 'report_1', 'report_3')
 
   h3 Console legacy profile and firmware improvements
   p A new profile #[+a('/alpakka/manual/profile_console_legacy') Console Legacy] is now implemented. It comes with mouse emulation completely disabled, and #[em right thumbstick emulated] in the 8-direction switch.
