--- a/src/pug/blog/report_3.pug
+++ b/src/pug/blog/report_3.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #3
-  hr
-  p: i 17 December 2022
-  hr
+  +news_header('17 December 2022', 'report_2', 'report_4')
 
   h3 Firmware easter egg
   p A new version of the Alpakka firmware has been released #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.86.1') 0.86.1], with an #[em easter egg] for patrons, which is one of the #[+ax(org.patreon) Patreon] rewards. We could explain how it works and what it does, but where would be the fun then?
