--- a/src/pug/blog/report_4.pug
+++ b/src/pug/blog/report_4.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #4
-  hr
-  p: i 24 December 2022
-  hr
+  +news_header('24 December 2022', 'report_3', 'report_5')
 
   h3 Blender individual files
   p #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/blender') Blender 3D models] are now properly split in smaller files (one file per part) as for example:
