--- a/src/pug/blog/report_5.pug
+++ b/src/pug/blog/report_5.pug
@@ -5,15 +5,13 @@ block append subtitle
 
 block content
   h2 Progress report #5
-  hr
-  p: i 30 December 2022
-  hr
+  +news_header('30 December 2022', 'report_4', 'report_6')
 
   h3 First batch of testers
   p We reviewed and accepted our first batch of #[+a("/blog/hardware_testing") testers] (in addition to the friends and family we used previously). Currently we are setting up and testing the process, as well as the logistics for distributing hardware for those testers who need it.
 
   p Based on the information provided in the questionaire:
-  ul 
+  ul
     li about 30% of the accepted testers have a disability
     li more than 35% will receive free #[+a("/alpakka") Alpakka] controllers
     li about 30% are interested in #[+a("/kapybara") Kapybara]
@@ -24,7 +22,7 @@ block content
   p We created groups for our Alpakka designs on #[+ax("https://www.printables.com/model/351339-alpakka") Printables ] and on #[+ax("https://www.thingiverse.com/thing:5748744") Thingiverse].
   p This should make it considerably easier for people to find those designs, mix them up, and provide feedback.
   hr
-  
+
   h3 Some stats
   p Our Discord community has now grown to more than 200 participants, and the activity is great!
   p We also have now more than 250 subscribers on YouTube.
