--- a/src/pug/blog/report_6.pug
+++ b/src/pug/blog/report_6.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #6
-  hr
-  p: i 13 January 2023
-  hr
+  +news_header('13 January 2023', 'report_5', 'report_7')
 
   h3 Sending Alpakka to further reviewers and testers
   p There has been plenty of printing, soldering, assembling, testing, packaging and shipping.
