--- a/src/pug/blog/report_7.pug
+++ b/src/pug/blog/report_7.pug
@@ -5,9 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #7
-  hr
-  p: i 27 January 2023
-  hr
+  +news_header('27 January 2023', 'report_6', 'report_8')
 
   h3 Risk of Rain 2
   p Our patrons voted for the next gameplay video, and the winner was #[+ax("https://www.youtube.com/watch?v=fGY4EGVrsoY") Risk of Rain 2].
