--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -19,3 +19,5 @@ block content
     li #[+ax('https://www.yankodesign.com/2022/12/26/this-diy-game-controller-looks-like-a-low-poly-object-taken-from-a-video-game/') Yanko Design] This DIY game controller looks like a low-poly object taken from a video game
     li #[+ax('https://www.raspberrypi.com/news/build-your-own-accessible-alpakka-gaming-controller/') Raspberry] Build your own accessible Alpakka gaming controller
     li #[+ax('https://youtu.be/zsn1IY-O4RU?t=209') RambleCan] Could this be the year for controller innovation?
+
+  p Do you know about any other media reporting on Input Labs? If so please contact us.
