--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -36,14 +36,18 @@ block page
           +wikilink('horizon_zero_dawn') Horizon Zero Dawn
           +wikilink('hunt_showdown') Hunt: Showdown
           +wikilink('insurgency_sandstorm') Insurgency: Sandstorm
+          +wikilink('mirrors_edge') Mirror's Edge
+          +wikilink('neon_white') Neon White
           +wikilink('no_mans_sky') No Man's Sky
           +wikilink('noita') Noita
+          +wikilink('portal_2') Portal 2
           +wikilink('prodeus') Prodeus
           +wikilink('pubg') PUBG: Battlegrounds
           +wikilink('rainbow_six_siege') Rainbow Six Siege
           +wikilink('risk_of_rain_2') Risk of Rain 2
           +wikilink('superhot_mcd') Superhot: Mind Control Delete
           +wikilink('the_witcher_3') The Witcher 3
+          +wikilink('titanfall_2') Titanfall 2
 
     div.box.entry
       block content
