Fixed typo / broken link for Titanfall 2

--- a/src/pug/blog/report_8.pug
+++ b/src/pug/blog/report_8.pug
@@ -32,7 +32,7 @@ block content
     li: +a('/db/mirrors_edge') Mirror's Edge
     li: +a('/db/neon_white') Neon White
     li: +a('/db/portal_2') Portal 2
-    li: +a('/db/titalfall_2') Titanfall 2
+    li: +a('/db/titanfall_2') Titanfall 2
   hr
 
   p - M&M <3
