added Nerdnest, Digikey and fabcross

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -6,10 +6,13 @@ block append subtitle
 block content
   h2 They were talking about us
   hr
-  p: i Last update: 2 February 2022
+  p: i Last update: 11 February 2023
   hr
 
   ul
+    li #[+ax('https://www.youtube.com/watch?v=OrucAJknMys') NerdNest] This CHANGED MY MIND about the Steam Controller 2
+    li #[+ax('https://www.digikey.jp/en/maker/videos/maker-update/2022/donald-bell-maker-update-favorite-projects-of-2022') Digikey Electronics] Favorite Projects of 2022
+    li #[+ax('https://fabcross.jp/news/2023/20230210_alpakka.html') fabcross] "Alpakka": A project to make your own open source gyro-equipped game controller
     li #[+ax('https://www.hackster.io/news/alpakka-is-an-open-source-gamepad-based-on-the-raspberry-pi-pico-05380c38181d') Hackster] Alpakka is an open source gamepad based on the Raspberry Pi Pico
     li #[+ax('https://picockpit.com/raspberry-pi/raspberry-pi-projects-alpakka-game-controller-blackout-logger-light-meter/') PiCockpit] Alpakka controller for the Pico
     li #[+ax('https://hackaday.com/2022/12/22/alpakka-a-creative-commons-game-controller/') Hackaday] Alpakka: A creative commons game controller
